# ServS-ControlRotor

./: README.md
Codigo/: CMakeLists.txt
Codigo/controlRotor/: CMakeLists.txt  Info.txt  controlRotor.cpp  funciones.cpp  funciones.h
PCB-ControlRotor-KiCad6/: PCB-ControlRotor.kicad_pcb  PCB-ControlRotor.kicad_prl  PCB-ControlRotor.kicad_pro  PCB-ControlRotor.kicad_sch  fp-info-cache
